corrected many possible errors